Fix modal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,8 +611,7 @@ main {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 20px;
   overflow-y: auto;
   overscroll-behavior: contain;
   z-index: 20;
@@ -653,7 +652,7 @@ main {
   background: var(--eerie-black-2);
   position: relative;
   padding: 15px;
-  margin: 15px 12px;
+  margin: auto;
   border: 1px solid var(--jet);
   border-radius: 14px;
   box-shadow: var(--shadow-5);
@@ -1488,7 +1487,20 @@ textarea.form-input::-webkit-resizer {
     gap: 25px;
     padding: 50px 30px;
     border-radius: 20px;
-    min-width: 70vw;
+    min-width: 80vw;
+  }
+
+  .modal-content-wrapper::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .modal-content-wrapper::-webkit-scrollbar-track {
+    background: var(--onyx);
+  }
+
+  .modal-content-wrapper::-webkit-scrollbar-thumb {
+    background: var(--orange-yellow-crayola);
+    border-radius: 20px;
   }
 
   .modal-img-wrapper {
